--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
 </head>
 <body>
     <img src="LandhausSarah.png" alt="" id="vorlage">
+
+    <nav>
+        <ul>
+            <li>HAUPTSEITE</li>
+            <li>WOHNEN</li>
+            <li>PREISE</li>
+            <li>GALERIE &#8595</li>
+            <li>ANREISE</li>
+            <li>SERVICE</li>
+            <li>IMPRESSUM</li>
+            <li>ANFRAGE</li>
+            <li>KONTAKT</li>
+        </ul>
+    </nav>
 </body>
 </html>
