--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landhaus Sarah | HERZLICH WILLKOMMEN!</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,5 +24,34 @@
             <li>KONTAKT</li>
         </ul>
     </nav>
+    <div id="hero">
+        <div id="welcome"> HERZLICH WILLKOMMEN!</div>
+        <button id="button">JETZT ONLINE ANFRAGEN</button>
+    </div>
+    <div id="spacer">
+        <img src="images/berglogo" alt="">
+        <h1>Die Urlaubsregion erleben</h1>
+    </div>
+    <div id="content1">
+        <img src="images/bild1.jpg" alt="">
+        <div id="text1">
+        <h2>Landhaus Sarah</h2>
+        <p>Ankommen und wohlfühlen in unserem Landhaus Sarah. Eingebettet in eine atemberaubende Bergkulisse liegt unser Landhaus in Dorfgastein. Pisten, Schwimmbad, Rad – und Wanderwege liegen direkt vor unserer Tür. Die nur 300 m entfernte Gondelbahn bringt sie in unser Schiegebiet und Wandergebiet. Wir würden uns darauf freuen auch sie bei uns im schönen Dorfgastein begrüßen zu dürfen.
+           <br><b>Ihre Familie Eva und Georg Rieser</b> </p>
+        <button id="button1">WIE KOMMEN SIE ZU UNS</button>
+    </div>
+    </div>
+    <div id="content2">
+        <div id="text2">
+        <p><b>Im Sommer</b> ist unser Landhaus Sarah direkter Ausgangspunkt für Wanderungen zu verschiedenen Gipfeln und Almen im Gasteinertal.  Die Gipfelbahn ist nur wenige Gehminuten entfernt. Spaß bietet ihnen auch direkt nebem der Gipfelbahn unser Erlebnisbad  mit zwei Rutschen und Sauna sowie zwei Restaurants.
+        <br><br>
+        <b>Im Winter</b> finden sie unser Landhaus eingebettet in einer ruhigen Winterlandschaft umgeben von einer traumhaften Bergkulisse. In wenigen Gehminuten erreichen sie die Gipfelbahn Fulseck.  Eine Bushaltestelle befindet sich auch da  und somit können sie bequem mit ihrem Schipass jedes Schigebiet gratis mit dem Schibus erreichen.</p>
+           <img src="images/bild2.jpg" alt="">
+    </div>
+    </div>
+    <div id="info">Landhaus Sarah | Fam. Georg & Eva Rieser | Bernkogelstrasse 9, A-5632 Dorfgastein Tel.: 0043 (0) 650 5251983 | Email: landhaus.sarah@sbg.at <br>
+        Copyright © Landhaus Sarah 2021. Alle Rechte vorbehalten. | Anmelden</div>
+        <div id="credit">Developed by: nostromo-webdesign.at</div>
+    
 </body>
 </html>
